<resources>
    <string name="app_name">PharmaWine</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_string"></string>
    <string name="nav_home_title">@string/app_name</string>
    <string name="nav_clients_title">Clients</string>
    <string name="nav_reports_title">Rapports</string>
    <string name="nav_more_title">Autres</string>
    <string name="menu_option_messenger">Messagerie</string>
    <string name="menu_option_notifications">Notifications</string>
    <string name="menu_option_settings">Paramètres</string>
    <string name="menu_option_about">A propos</string>
    <string name="activity_login_title">Connexion</string>
    <string name="activity_settings_title">Paramètres</string>
    <string name="activity_notifications_title">Notifications</string>
    <string name="activity_messenger_title">Messagerie</string>
    <string name="activity_about_title">A propos</string>
    <string name="activity_new_client_title">Nouveau client</string>
    <string name="activity_personal_goals_title">Objectif personnel</string>
    <string name="menu_planning_title">Planning</string>
    <string name="menu_clients_title">Clients</string>
    <string name="menu_stats_title">Statistiques</string>
    <string name="menu_products_title">Produits</string>
    <string name="menu_laboratories_title">Laboratoires</string>
    <string name="menu_wholesalers_title">Grossistes</string>
    <string name="menu_profil_title">Profilage</string>
    <string name="menu_gift_title">Dons</string>
    <string name="menu_premiums_title">Primes</string>
    <string name="menu_cal_title">Calendar</string>
    <string name="menu_cal_evenement">Evénements</string>
    <string name="menu_network_title">Réseaux</string>
    <string name="menu_infos_title">Informations</string>
    <string name="menu_logout_title">Déconnexion</string>
    <string name="password_forgotten">Mot de passe oublié ?</string>
    <string name="not_connected">Aucune connexion internet !</string>
    <string name="field_required">Champ obligatoire</string>
    <string name="email_not_valid">Adresse email non valide</string>
    <string name="not_long_enough">% caractères minimum</string>
    <string name="loading">Chargement en cours &#8230;</string>
    <string name="call">Appeler</string>
    <string name="no_data_returned">Aucune donnée retournée</string>
    <string name="unauthorised_id">Vos identifiants sont incorrects !</string>
    <string name="logged_in">Connecté !</string>
    <string name="smthg_wrong_request">Oops un petit problème ! Réessayez plus tard</string>
    <string name="references">Références</string>
    <string name="product_classes">Classes pharmaceutiques</string>
    <string name="laboratory">Laboratoire</string>
    <string name="wholesaler">Grossiste</string>
    <string name="medical_teams">Corps médicaux</string>
    <string name="hospitals">Hôpitaux</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="product_classes_number">% classes pharmaceutiques</string>
    <string name="products_number">% produits</string>
    <string name="sex">Sexe</string>
    <string name="marital_status">Situation matrimoniale</string>
    <string name="nationality">Nationalité</string>
    <string name="birthday">Date de naissance</string>
    <string name="believes">Croyances religieuses</string>
    <string name="email">E-mail</string>
    <string name="adresse_emaile">Adresse email</string>
    <string name="address">Adresse</string>
    <string name="reprensentative">Représentant</string>
    <string name="founder">Fondateur</string>
    <string name="created_on">Date de création</string>
    <string name="employees_number">Employés</string>
    <string name="pharma_annexe">Annexe(s)</string>
    <string name="clients_restants">Clients restant</string>
    <string name="full_name_of_the_client">Full name of the client</string>
    <string name="speciality">Speciality</string>
    <string name="clients_vus">Clients vus</string>
    <string name="clients_connus">Clients connus</string>
    <string name="clients_inconnus">Clients inconnus</string>
    <string name="inconnus">Inconnus</string>
    <string name="connus">Connus</string>
    <string name="tous">Tous</string>
    <string name="aucun_client_connu_vu">Aucun client connu trouvé</string>
    <string name="aucun_client_inconnu_trouve">Aucun client inconnu trouvé</string>
    <string name="aucun_client_trouve">Aucun client trouvé</string>
    <string name="status">Status</string>
    <string name="autres_infos">Autres informations</string>
    <string name="profil">Profil</string>
    <string name="suivant">Suivant</string>
    <string name="etape_1">Etape 1</string>
    <string name="etape_2">Etape 2</string>
    <string name="etape_3">Etape 3</string>
    <string name="etape_4">Etape 4</string>
    <string name="etape_5">Etape 5</string>
    <string name="etape_6">Etape 6</string>
    <string name="mois">Mois</string>
    <string name="annee">Annee</string>
    <string name="jour">Jour</string>
    <string name="adresse_du_client">Adresse du client</string>
    <string name="autres_numeros">Autres numeros ?</string>
    <string name="adresse_email">Adresse email</string>
    <string name="adresse_email_du_client">Adresse email du client</string>
    <string name="choisissez">Choisissez</string>
    <string-array name="religious_belief_array">
        <item>Chrétien</item>
        <item>Musulman</item>
        <item>Autres</item>
    </string-array>
    <string-array name="marital_status_array_fr">
        <item>Célibataire</item>
        <item>Marié(e)</item>
        <item>Autres</item>
    </string-array>
    <string-array name="nationality_fake_array_fr">
        <item>Congo Brazaville</item>
        <item>Cote d\'Ivoire</item>
        <item>Togo</item>
        <item>Ghana</item>
    </string-array>
    <string-array name="months_array_fr">
        <item>Janvier</item>
        <item>Fevrier</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Aout</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Decembre</item>
    </string-array>
    <string-array name="centres_array">
        <item>Centre 1</item>
        <item>Centre 2</item>
        <item>Centre 3</item>
    </string-array>
    <string-array name="zones_array">
        <item>Zone 1</item>
        <item>Zone 2</item>
        <item>Zone 3</item>
    </string-array>
    <string-array name="sex_array">
        <item>Homme</item>
        <item>Femme</item>
    </string-array>
    <string name="title_activity_visite_in_progress">Visite en cours &#8230;</string>
    <string name="msg_cancel_visite">Êtes vous sûr de vouloir annuler la visite?</string>
    <string name="msg_end_visite">La visite est-t-elle terminée ?</string>
    <string name="msg_confirmation_visite">Êtes vous sûr de vouloir commencer un visite ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="msg_confim_visite_end">Êtes vous sûr d\'avoir terminé votre visite avec cette personne?</string>
    <string name="rapport">Rapport</string>
    <string name="centre">Centre</string>
    <string name="changer_si_pas_correcte">(Changer si pas correcte)</string>
    <string name="zone">Zone</string>
    <string name="objectif_de_la_visite">Objectif de la visite</string>
    <string name="objectif_journalier">Objectif journalier</string>
    <string name="reste">Reste</string>
    <string name="hint_objectif_visit">Entrer les objectifs de la visite</string>
    <string name="hint_promesse_obtenue">Entrer les promesses obtenues</string>
    <string name="terminer_mon_rapport">Terminer mon rapport</string>
    <string name="terminer">Terminer</string>
    <string name="prescriptions_constat">Prescriptions constatées</string>
    <string name="visite_terminee">Visite terminée</string>
    <string name="precedent">Précedent</string>
    <string name="visite_terminée">Visite terminée</string>
    <string name="prospect_inconnu">Prospect inconnu</string>
    <string name="prospect_connu">Prospect connu</string>
    <string name="corps_medical">Corps médical</string>
    <string name="pharmacie">Pharmacie</string>
    <string name="informations_maquantes">Informations manquantes</string>
    <string name="rapport_termine">Rapport terminé</string>
    <string name="voulez_vous_terminer_le_profilage_de_ce_client">Voulez-vous terminer le profilage de ce client ?</string>
    <string name="certaines_informations_sont_maquantes">Certraines informations sont manquantes</string>
    <string name="nom_prospect">Nom du prospect</string>
    <string name="ou_num_prospect">Ou numéro</string>
    <string name="num_prospect">Numéro du prospect</string>
    <string name="rapport_hebdo">Rapport hebdomadaire</string>
    <string name="statistique_medicale_week">Statistiques médicale de la semaine</string>
    <string name="activite_menee">Activités menées</string>
    <string name="objection">Objections</string>
    <string name="objectif_next_week">Objectifs de la semaine prochaine</string>
    <string name="send_my_report">Envoyer mon rapport</string>
    <string name="valider">Valider</string>
    <string name="enter_text_here">Entrez votre texte ici.</string>
    <string name="vos_objection">Vos objections</string>
    <string name="prescripteurs">Prescripteurs</string>
    <string name="garde">Gardes</string>
    <string name="reunions">Réunions</string>
    <string name="precise_centre">Précisez centre</string>
    <string name="produit">Produit</string>
    <string name="engagment">Engagement obtenus</string>
    <string name="mode_de_suivi">Mode de suivi</string>
    <string name="relation_public">Relations Publiques</string>
    <string name="action_pharma">Actions pharmacies</string>
    <string name="parcours_fidel">Parcours Fidélisation</string>
    <string name="zone_profonde">Zone Profonde</string>
    <string name="couverture">Couverture</string>
    <string name="fdc">FDC</string>
    <string name="pdd">PDD</string>
    <string name="p">P</string>
    <string name="total">Total</string>
    <string name="vu">Vu</string>
    <string name="total_prevu">Total prévu</string>
    <string name="real">Réal</string>
    <string name="r_over_p">R/P</string>
    <string name="nom_specialite">Nom de la spécialité</string>
    <string name="specialite">Spécialités</string>
    <string name="prospection">Prospections</string>
    <string name="pig">PIG</string>
    <string name="pim">PIM</string>
    <string name="cfg">CFG</string>
    <string name="cfm">CFM</string>
    <string name="fond_de_commerce">Fond de commerce</string>
    <string name="potentiel_de_dev">Potentiel de développement</string>
    <string name="cig">CIG</string>
    <string name="cim">CIM</string>
    <string name="pcg">PCG</string>
    <string name="pcm">PCM</string>
    <string name="promesses_obtenues">Promesses obtenues</string>
    <string name="etes_vous_sur_d_avoir_termine">Êtes-vous sur d\'avoir terminé ?</string>
    <string name="title_activity_messging">Messages</string>
    <string name="the_subtitle_should_always_be_the_latest_message_of_the_room">The subtitle should be the last message of the room</string>
    <string name="message_that_ive_sent_to_user">Message that I\'m sending to another user</string>
    <string name="fake_date">21/12/2018</string>
    <string name="votre_message">Votre message</string>
    <string name="une_erreur_s_est_produite">Une erreur s\'est produite</string>
    <string name="erreur_de_recuperation_du_planning">Echec de recuperation du planning</string>
    <string name="reessayez">Réessayer</string>
    <string name="prenoms_du_prospect">Prénom du prospect</string>
    <string name="nom_du_prospect">Nom du prospect</string>
    <string name="nom">Nom</string>
</resources>