<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.rapport.ReportEtape2Fragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <!--Don't forget to add dot progress bar later-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textViewCentre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/objectif_de_la_visite"
                android:textColor="@color/black_variant"
                android:textSize="16sp" />


        </LinearLayout>


        <EditText
            android:id="@+id/ed_objectif_visit"
            style="@style/anOtherRoundedTextEditTheme"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/hint_objectif_visit" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_suivant_etape_3_to_4"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="@color/colorAccent"
        android:text="@string/suivant"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_precedent_etape_3_to_2"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:text="@string/precedent"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="13sp" />
</FrameLayout>