<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.rapportHebdo.ActiviteMeneGardeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="12dp"
            android:backgroundTint="@color/bpWhite"
            android:src="@drawable/progress_1_of_6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/garde"
            android:textColor="@color/bpblack"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/ed_garde"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="52dp"
        android:hint="@string/enter_text_here" />

    <Button
        android:id="@+id/btn_save_garde"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:text="@string/suivant"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="13sp" />


</FrameLayout>