<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.rapportHebdo.ObjectionFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:backgroundTint="@color/bpWhite"
            app:backgroundTint="@color/green"
            app:borderWidth="5dp"
            app:elevation="3dp"
            app:pressedTranslationZ="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/vos_objection"
            android:textColor="@color/bpblack"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/ed_objection"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="54dp"
        android:hint="@string/enter_text_here" />

    <Button
        android:id="@+id/btn_save_objection"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:text="@string/valider"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="13sp" />


</FrameLayout>